@@ -1,3 +1,8 @@
+2007-03-23  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSView.m: Replace calls to the now deprecated methods on
+	NSAffineTransform with correct ones.
+
 2007-03-22  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSButtonCell.m (-drawWithFrame:inView:),
